--- a/pad-project1-part2/Common/Common.csproj
+++ b/pad-project1-part2/Common/Common.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <None Remove="Protos\publish.proto" />
+    <None Remove="Protos\subscribe.proto" />
   </ItemGroup>
 
   <ItemGroup>
@@ -19,6 +20,7 @@
 
   <ItemGroup>
     <Protobuf Include="Protos\publish.proto" />
+    <Protobuf Include="Protos\subscribe.proto" />
   </ItemGroup>
 
 </Project>
