--- a/pad-project1-part2/Common/Common.csproj
+++ b/pad-project1-part2/Common/Common.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Protos\Notify.proto" />
     <None Remove="Protos\publish.proto" />
     <None Remove="Protos\subscribe.proto" />
   </ItemGroup>
@@ -19,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Protobuf Include="Protos\Notify.proto" />
     <Protobuf Include="Protos\publish.proto" />
     <Protobuf Include="Protos\subscribe.proto" />
   </ItemGroup>
