--- a/pad-project1-part2/Receiver/Receiver.csproj
+++ b/pad-project1-part2/Receiver/Receiver.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Services\" />
+    <ProjectReference Include="..\Common\Common.csproj" />
   </ItemGroup>
 
 </Project>
