--- a/pad-project1-part2/Common/Common.csproj
+++ b/pad-project1-part2/Common/Common.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Protobuf Include="Protos\Notify.proto" />
+    <Protobuf Include="Protos\notify.proto" />
     <Protobuf Include="Protos\publish.proto" />
     <Protobuf Include="Protos\subscribe.proto" />
   </ItemGroup>
